[package]
name = "kerberust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
chrono = "0.4.31"
kerberos_asn1 = "0.2.1"
kerberos_constants = "0.0.9"
kerberos_crypto = "0.3.6"
clap = "4.4.4"
hex = "0.4.3"
